<resources>
    <string name="app_name">Local Linguist</string>

    <string name="request_fail">Sorry, your connection was lost. Please try again.</string>
    <string name="request_fail_server_error">There was a problem with our server. Please try again later.</string>
    <string name="request_fail_unauthorized">"Sorry, your session has expired. Pelase log in again."</string>
    <string name="request_fail_re_auth">Login expired, refreshing&#x2026;</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="empty_result">There is currently no data available.</string>


    <string name="refresh">Refresh</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="message">Message</string>
    <string name="expired">Expired</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>


    <!-- Splash screen settings -->
    <string name="splash_start_button">Komesa</string>

    <string name="study_question_count_format">"%1$s questions"</string>
    <string name="study_title_select">Please select a study</string>


    <string name="interview_title">Interview</string>
    <string name="interview_name">What is your full name?</string>
    <string name="interview_age">What is your age?</string>
    <string name="interview_years">(years)</string>
    <string name="interview_gender">What is your gender?</string>
    <string name="interview_occupation">What is your occupation?</string>
    <string name="interview_education">What is your education?</string>
    <string name="interview_primarylanguage">What is your primary language?</string>
    <string name="interview_morelanguages">Do you speak another language?</string>



    <string name="interview_municipality_lives">What municipality do you live in?</string>
    <string name="interview_district_lives">In ##municipality##, what district do you live?</string>
    <string name="interview_village_lives">In ##district##, what village do you live?</string>

    <string name="interview_lived_life">Have you lived in ##village## your whole life?</string>

    <string name="interview_municipality_born">What municipality were you born in?</string>
    <string name="interview_district_born">In ##municipality##, what district were you born in?</string>
    <string name="interview_village_born">In ##district##, what village were you born in?</string>

    <string name="interview_lived_length">How many years have you lived in ##village##?</string>

    <string name="interview_audio_instructions">Please say the word for the picture you see on the screen.</string>
    <string name="interview_audio_recording">What is the word for this?</string>
    <string name="interview_recording">Recording</string>
    <string name="interview_audio_playing">Playing</string>
    <string name="interview_audio_replay">Would you like to hear the recording again?</string>
    <string name="interview_audio_playback_error">Error playing audio. Retry?</string>
    <string name="interview_recording_ok">Is this recording ok?</string>
    <string name="interview_transcribe">What is the transcription for this word?</string>

    <string name="phrase_prompt_text">##input_instruction## and then ##output_instruction##</string>
    <string name="phrase_prompt_text_input_picture">Look at the picture</string>
    <string name="phrase_prompt_text_input_audio">Listen to the recording</string>
    <string name="phrase_prompt_text_output_text">type the word in your language</string>
    <string name="phrase_prompt_text_output_audio">record it in your language</string>
    <string name="phrase_prompt_text_output_audio_text">record it and type it in your language</string>
    <string name="phrase_prompt_text_output_choices">choose the correct option</string>
    <string name="phrase_prompt_text_output_audio_choices">record it in your language and choose the correct option</string>

    <!-- Button settings -->
    <string name="next_button">Next</string>
    <string name="start_button">Start</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    <string name="home_title">Home</string>
    <string name="home_select_person">Person selection</string>
    <string name="home_edit_button">Edit</string>
    <string name="home_add_person_button">Add New Person</string>
    <string name="home_start_capturing_button">Start Capturing</string>
    <string name="home_data_upload_button">Data Upload</string>
    <string name="home_select_person_toast">Please select a person</string>

    <string name="capture_title">Capture Language</string>
    <string name="capture_word_hint">Description</string>
    <string name="capture_record_button">Record</string>
    <string name="capture_play_button">Play</string>
    <string name="capture_stop_button">Stop</string>
    <string name="capture_back_button">Back</string>
    <string name="capture_next_button">Next</string>
    <string name="capture_for_label">Capturing for</string>

    <string name="settings_title">Settings</string>
    <string name="settings_disk_size_label">Total disk size</string>
    <string name="settings_disk_free_label">Total space free</string>

    <string name="person_title">Add new person</string>
    <string name="person_title_edit">Edit person</string>
    <string name="person_is_new_question">Have you interviewed this person before?</string>
    <string name="person_title_select">Please select a person</string>
    <string name="person_name_label">Name</string>
    <string name="person_age_label">Age</string>
    <string name="person_gender_label">Gender</string>
    <string name="person_livesin_label">Lives in</string>
    <string name="person_livesinfor_label">For number of years</string>
    <string name="person_firstlanguage_label">First language</string>
    <string name="person_secondlanguage_label">Second language</string>
    <string name="person_thirdlanguage_label">Third language</string>
    <string name="person_otherlanguages_label">Other languages</string>
    <string name="person_mylocation_label">My location</string>
    <string name="person_education_label">Educated to</string>
    <string name="person_ok_button">Ok</string>
    <string name="person_delete_button">Delete</string>
    <string name="person_enter_name_toast">Please enter a name</string>
    <string name="person_updated_toast">Person updated</string>
    <string name="person_added_toast">Person added</string>

    <!-- interviewer details -->
    <string name="person_mobile_phone">Mobile Number</string>
    <string name="person_email">Email</string>
    <string name="interviewer_name_format">Interviewer: %1$s</string>
    <string name="interviewer_name_edit">Edit Interviewer</string>

    <string name="person_gender_male">Male</string>
    <string name="person_gender_female">Female</string>

    <string name="person_education_primary">Primary</string>
    <string name="person_education_secondary">Secondary</string>
    <string name="person_education_university">University</string>

    <string name="menu_cancel_interview">Cancel Interview</string>
    <string name="menu_upload_interview">Upload</string>
    <string name="menu_skip_question">Skip Question</string>
    <string name="interview_response_language_other">Other</string>

    <string-array name="person_languages_array">
        <item>english</item>
        <item>french</item>
        <item>german</item>
        <item>italian</item>
        <item>japanese</item>
        <item>korean</item>
    </string-array>


    <string name="upload_title">Upload Data</string>
    <string name="upload_interviews_format">Ready to upload %1$d interviews</string>
    <string name="upload_number_of_people_label">Number of people interviewed</string>
    <string name="upload_upload_data_button">Upload Data</string>
    <string name="upload_starting_upload">starting upload</string>
    <string name="upload_starting_upload_format">starting upload of %1$d interviews</string>
    <string name="upload_uploading_data">uploading data</string>
    <string name="upload_uploading_audio">uploading audio file</string>
    <string name="upload_upload_complete">upload complete</string>

    <string name="delete_person_title">Delete Person</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_name_capture">NameCaptureActivity</string>
    <string name="title_activity_age_capture">AgeCaptureActivity</string>
    <string name="title_activity_gender_capture">GenderCaptureActivity</string>
    <string name="title_activity_home_capture">HomeCaptureActivity</string>
    <string name="INTENT_PERSONID">org.rhok.linguist.personid</string>
    <string name="title_activity_years_in_home_capture">YearsInHomeCaptureActivity</string>
    <string name="title_activity_activity_occupation_capture">activity_occupation_capture</string>
    <string name="title_activity_occupation_activity">occupation_activity</string>
    <string name="title_activity_occupation_capture">OccupationCaptureActivity</string>
    <string name="title_activity_education">EducationActivity</string>
    <string name="title_activity_spoken_language">SpokenLanguageActivity</string>
    <string name="title_activity_more_languages">MoreLanguagesActivity</string>
    <string name="title_activity_how_long_lived">HowLongLivedActivity</string>
    <string name="title_activity_district_born">DistrictBornActivity</string>
    <string name="title_activity_sub_district_born">SubDistrictBornActivity</string>
    <string name="title_activity_village_born">VillageBornActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_sub_district">SubDistrictActivity</string>
    <string name="title_activity_village">VillageActivity</string>
    <string name="title_activity_study">StudyActivity</string>
    <string name="title_activity_home_new">HomeNew</string>
    <string name="title_activity_interview_name">InterviewNameActivity</string>
    <string name="title_activity_interview_age">InterviewAgeActivity</string>
    <string name="title_activity_interview_gender">InterviewGenderActivity</string>
    <string name="title_activity_interview_occupation">InterviewOccupation</string>
    <string name="title_activity_interview_education">InterviewEducationActivity</string>
    <string name="title_activity_interview_more_languages">InterviewMoreLanguagesActivity</string>
    <string name="title_activity_interview_lived_life">InterviewLivedLifeActivity</string>
    <string name="title_activity_interview_lived_length">InterviewLivedLengthActivity</string>
    <string name="title_activity_recording_audio">RecordingAudioActivity</string>
    <string name="title_activity_recording_instructions">RecordingInstructionsActivity</string>
    <string name="title_activity_recording_listen">RecordingListenActivity</string>
    <string name="title_activity_recording_transcribe">RecordingTranscribeActivity</string>
    <string name="title_activity_app_settings">AppSettingsActivity</string>
    <string name="title_activity_interviewer">Interviewer Details</string>


</resources>
