<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.rhok.linguist.activity.common.SplashActivity"
    android:layout_margin="@dimen/app_window_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/splashLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:src="@drawable/splash_logo" />

        <TextView android:text="@string/app_name"
            android:textColor="#00A887"
            android:layout_below="@+id/splashLogoImageView"
            android:textSize="16pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/splash_title"
            />

    </RelativeLayout>

    <TextView
        style="@style/ListHeadingText"
        android:id="@+id/interviewer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/interviewer_edit"
        android:onClick="editInterviewerClick"
        tools:text="@string/interviewer_name_format"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:layout_alignTop="@+id/interviewer_edit"
        android:layout_alignBottom="@+id/interviewer_edit"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/interviewer_edit"
        android:onClick="editInterviewerClick"
        android:text="@string/edit"
        android:src="@android:drawable/ic_menu_edit"
        />
    <Button style="@style/nextButtonStyle" android:text="@string/start_button" android:id="@+id/nextbutton"/>

</RelativeLayout>
