<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.lachlan.myfirstapp.HomeActivity">

    <LinearLayout
        android:gravity="left"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/home_select_person"
            android:layout_marginBottom="50px"
            android:textSize="10pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/person_spinner"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button android:text="@string/home_edit_button"
                android:onClick="editPersonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:layout_marginTop="50px"
            android:layout_marginBottom="50px"
            android:onClick="newPersonButton"
            android:text="@string/home_add_person_button"
            android:id="@+id/add_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginBottom="50px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_start_capturing_button"
            android:id="@+id/stopbutton"
            android:onClick="startButton"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_data_upload_button"
            android:id="@+id/uploadbutton"
            android:onClick="uploadButton"
            />

    </LinearLayout>
</LinearLayout>

</ScrollView>