<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/app_window_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:paddingTop="0px"
            android:layout_marginTop="10px"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/interview_audio_recording"
            android:id="@+id/recordingQuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"/>
        <TextView
            android:paddingTop="0px"
            android:layout_marginTop="0px"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff0000"
            android:text="@string/interview_audio_playing"
            android:id="@+id/recordingMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/interview_audio_replay"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/recordReplayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <Button style="@style/noButtonStyle" android:id="@+id/noButton" android:visibility="gone" />

    <Button style="@style/yesButtonStyle" android:id="@+id/yesButton" android:visibility="gone" />

</RelativeLayout>
